force-app/main/default/objects/Centro_de_CO_Item__c/Centro_de_CO_Item__c.object-meta.xml
<CustomObject>
    <label>Centro de CO Item</label>
    <nameField>
        <label>Nombre de Centro de CO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centro de CO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>