force-app/main/default/objects/Centro_de_CO_Item__c/fields/Centro_de_CO__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_CO__c</fullName>
    <label>Centro de CO</label>
    <referenceTo>Centro_de_CO__c</referenceTo>
    <relationshipLabel>Centro de CO Items</relationshipLabel>
    <relationshipName>Centro_de_CO_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>