force-app/main/default/objects/Centro_de_CO_Item__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <formula>TEXT(Centro_de_CO__r.Campania__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season</label>
    <type>Text</type>
</CustomField>